# fetch_pbd

./: .travis.yml  LICENSE  README.md
fetch_arm_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
fetch_arm_control/config/: fetch_arm_control.rviz
fetch_arm_control/launch/: arm_control_backend.launch  arm_interaction_backend.launch  arm_interaction_frontend.launch
fetch_arm_control/msg/: GripperState.msg
fetch_arm_control/nodes/: arm_control_node.py  interactive_arm_control.py
fetch_arm_control/src/fetch_arm_control/: __init__.py  arm.py  arm_control_marker.py  arm_controls.py
fetch_arm_interaction/: CMakeLists.txt  package.xml  setup.py
fetch_arm_interaction/launch/: arm_interaction_backend.launch  arm_interaction_frontend.launch
fetch_arm_interaction/nodes/: arm_interaction_node.py
fetch_arm_interaction/src/fetch_arm_interaction/: arm.py  arm_interaction.py  arm_interaction_marker.py
fetch_pbd_gui/: CMakeLists.txt  package.xml  plugin.xml
fetch_pbd_gui/src/fetch_pbd_gui/: pbd_gui.py
fetch_pbd_gui/web_interface/: pbd_gui.html
fetch_pbd_gui/web_interface/fetch-pbd-gui/: bower.json  manifest.json  polymer.json
fetch_pbd_gui/web_interface/fetch-pbd-gui/elements/: current-action.html  imports.html  my-actions.html  pbd-gui.html  sortable-import.html  sortable-list.html
fetch_pbd_interaction/: .gitignore  CHANGELOG.rst  CMakeLists.txt  install_web_dependencies.sh  package.xml  setup.py
fetch_pbd_interaction/config/: fetch_pbd.rviz  filters.yaml  zones.yaml
fetch_pbd_interaction/examples/: example_actions.json  test_session_interface.py
fetch_pbd_interaction/include/fetch_pbd_interaction/: world.h  world_landmark.h
fetch_pbd_interaction/launch/: fake_caster.launch  grasp_suggestion.launch  interaction_only.launch  kinect_tf.launch  pbd.launch  pbd_backend.launch  pbd_backend_prereqs.launch  pbd_frontend.launch  pbd_prereqs.launch  pbd_rviz_viewer.launch  pbd_simulation_stack.launch  pbd_web_frontend.launch  pbd_web_prereqs.launch  pr2_interactive_manipulation_desktop.launch  simulated_robot.launch
fetch_pbd_interaction/msg/: Action.msg  ActionStep.msg  ActionStepSequence.msg  ArmState.msg  ArmTarget.msg  ArmTrajectory.msg  Condition.msg  ExecutionStatus.msg  ExperimentState.msg  GripperAction.msg  GuiCommand.msg  GuiInput.msg  Landmark.msg  OrientationRPY.msg  RobotSound.msg  SessionState.msg  WorldState.msg
fetch_pbd_interaction/nodes/: demo.py  logger.py  pbd_arm_control_node.py  pbd_arm_interaction_node.py  pbd_interaction_node.py  pbd_node.py  pbd_world_node.cpp  pbd_world_node.py  serve_web_interface.sh
fetch_pbd_interaction/scripts/: serve_web_interface.sh  test_and_coverage.sh
fetch_pbd_interaction/src/: world.cpp  world_landmark.cpp
fetch_pbd_interaction/src/fetch_pbd_interaction/: __init__.py  action.py  action_step_marker.py  arm_control.py  arm_control_marker.py  arm_interaction.py  arm_target.py  arm_trajectory.py  db.py  execute_action_server.py  grasp.py  interaction.py  primitive.py  programmed_action.py  response.py  robot.py  robot_speech.py  session.py  world.py  world_landmark.py
fetch_pbd_interaction/srv/: ExecuteActionById.srv  GetArmMovement.srv  GetEEPose.srv  GetExperimentState.srv  GetGazeGoal.srv  GetGripperState.srv  GetJointStates.srv  GetMostSimilarObject.srv  GetNearestObject.srv  GetObjectFromName.srv  GetObjectList.srv  GetSessionState.srv  GuiInput.srv  MoveArm.srv  MoveArmTraj.srv  Ping.srv  SetGripperState.srv
fetch_pbd_interaction/test/: test_endtoend.py  test_endtoend.test  test_endtoend_realrobot.py
fetch_pbd_interaction/web_interface/fetch-pbd-gui/: .eslintrc.json  bower.json  build_frontend.sh  index.html  install_web_dependencies.sh  package.json  polymer.json
fetch_pbd_interaction/web_interface/fetch-pbd-gui/compiled_frontend/: polymer.json
fetch_pbd_interaction/web_interface/fetch-pbd-gui/compiled_frontend/bundled/: index.html  service-worker.js
fetch_pbd_interaction/web_interface/fetch-pbd-gui/compiled_frontend/bundled-es6/: index.html
fetch_pbd_interaction/web_interface/fetch-pbd-gui/compiled_frontend/bundled-es6/elements/: current-action.html  my-actions.html  pbd-gui.html
fetch_pbd_interaction/web_interface/fetch-pbd-gui/compiled_frontend/bundled/elements/: current-action.html  imports.html  marker_icons.html  my-actions.html  pbd-gui.html
fetch_pbd_interaction/web_interface/fetch-pbd-gui/compiled_frontend/bundled/elements/scripts/: STLLoader.min.js  eventemitter2.min.js  ros3d.js  roslib.js
fetch_pbd_interaction/web_interface/fetch-pbd-gui/compiled_frontend/unbundled/: service-worker.js
fetch_pbd_interaction/web_interface/fetch-pbd-gui/compiled_frontend/unbundled/elements/: current-action.html  my-actions.html  pbd-gui.html
fetch_pbd_interaction/web_interface/fetch-pbd-gui/compiled_frontend/unbundled/elements/scripts/: ColladaLoader.min.js  ColladaLoader2.min.js  three.min.js
fetch_pbd_interaction/web_interface/fetch-pbd-gui/elements/: current-action.html  imports.html  marker_icons.html  my-actions.html  pbd-gui.html
fetch_pbd_interaction/web_interface/fetch-pbd-gui/elements/scripts/: ros3d.js
fetch_pbd_speech_recognition/: .gitignore  CMakeLists.txt  package.xml
fetch_pbd_speech_recognition/data/: commands.corpus  commands.dic  commands.lm
fetch_pbd_speech_recognition/launch/: command_recognition.launch
fetch_pbd_speech_recognition/msg/: Command.msg
fetch_pbd_speech_recognition/nodes/: recognize_commands.py
fetch_pbd_speech_recognition/scripts/: generate_corpus.py
fetch_social_gaze/: .gitignore  CHANGELOG.rst  CMakeLists.txt  package.xml
fetch_social_gaze/action/: Gaze.action
fetch_social_gaze/launch/: gaze.launch
fetch_social_gaze/nodes/: social_gaze.py  social_gaze_server.py
tabletop_object_detector/: CMakeLists.txt  package.xml
tabletop_object_detector/launch/: tabletop_segmentation.launch
tabletop_object_detector/src/: tabletop_segmentation.cpp
