<package>
  <name>fetch_pbd_gui</name>
  <version>1.0.0</version>
  <description>fetch_pbd_gui</description>
  <maintainer email="sksellio@gmail.com">Sarah Elliott</maintainer>

  <license>TODO</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>fetch_pbd_speech_recognition</build_depend>
  <build_depend>fetch_pbd_interaction</build_depend>
  <build_depend>sound_play</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>fetch_pbd_speech_recognition</run_depend>
  <run_depend>fetch_pbd_interaction</run_depend>
  <run_depend>sound_play</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>rqt_gui</test_depend> -->
  <!-- <test_depend>rqt_gui_py</test_depend> -->
  <!-- <test_depend>pr2_pbd_speech_recognition</test_depend> -->
  <!-- <test_depend>pr2_pbd_interaction</test_depend> -->
  <!-- <test_depend>sound_play</test_depend> -->

<export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
</export>

</package>
