<?xml version="1.0"?>
<package>
  <name>fetch_pbd_interaction</name>
  <version>0.0.0</version>
  <description>The fetch_pbd_interaction package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sksellio@gmail.com">Sarah Elliott</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/pr2_pbd_interaction</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>mongo_msg_db_msgs</build_depend>
  <build_depend>fetch_arm_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospy_message_converter</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>mongo_msg_db_msgs</run_depend>
  <run_depend>fetch_arm_control</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rospy_message_converter</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <!--
  <run_depend>geometry_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>kinematics_msgs</run_depend>
  <run_depend>object_manipulation_msgs</run_depend>
  <run_depend>pr2_arm_kinematics</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>pr2_gazebo</run_depend>
  <run_depend>pr2_gripper_sensor_msgs</run_depend>
  <run_depend>pr2_interactive_manipulation</run_depend>
  <run_depend>pr2_interactive_manipulation_frontend</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>pr2_interactive_object_detection</run_depend>
  <run_depend>pr2_mechanism_controllers</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>pr2_pbd_speech_recognition</run_depend>
  <run_depend>pr2_social_gaze</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tabletop_collision_map_processing</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_throttle</run_depend>
  <run_depend>trajectory_filter_server</run_depend>
  <run_depend>visualization_msgs</run_depend>-->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
