<?xml version="1.0"?>
<package>
  <name>fetch_pbd_interaction</name>
  <version>0.0.0</version>
  <description>The fetch_pbd_interaction package</description>

  <maintainer email="sksellio@gmail.com">Sarah Elliott</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>fetch_arm_control</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_depend>rospy_message_converter</build_depend>
  <build_depend>interactive_marker_proxy</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>tf2_web_republisher</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>python-couchdb</build_depend>
  <build_depend>rail_segmentation</build_depend>
  <build_depend>rail_manipulation_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>fetch_arm_control</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>rospy_message_converter</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>interactive_marker_proxy</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>tf2_web_republisher</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>python-couchdb</run_depend>
  <run_depend version_gt="0.1.9-0">rail_segmentation</run_depend>
  <run_depend>rail_manipulation_msgs</run_depend>

  <export>
  </export>

</package>
