<package>
  <name>fetch_pbd_speech_recognition</name>
  <version>1.0.0</version>
  <description>fetch_pbd_speech_recognition

		 1. Update msg/Command.msg with your list of commands
		 2. Run the script to generate the command corpus automatically: $ ./scripts/generate_corpus.py
		 3. Upload data/commands.corpus at http://www.speech.cs.cmu.edu/tools/lmtool.html and compile the knowledge base.
		 4. Download the generated Dictionary as data/commands.dic and the Language Model as data/commands.lm
		 5. Make</description>
  <maintainer email="sksellio@gmail.com">Sarah Elliott</maintainer>

  <license>BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->

</package>
