<package>
  <name>fetch_social_gaze</name>
  <version>0.0.0</version>
  <description>The fetch_social_gaze package</description>

  <maintainer email="sksellio@gmail.com">Sarah Elliott</maintainer>
  <license>BSD</license>
  <!--<depend package="actionlib"/>-->
  <!--<depend package="geometry_msgs"/>-->
  <!--<depend package="kinematics_msgs"/>-->
  <!--<depend package="pr2_mechanism_controllers"/>-->
  <!--<depend package="pr2_mechanism_msgs"/>-->
  <!--<depend package="pr2_controllers_msgs"/>-->
  <!--<depend package="rospy"/>-->
  <!--<depend package="tf"/>-->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>

</package>


