<package>
  <name>fetch_social_gaze</name>
  <version>0.0.4</version>
  <description>The fetch_social_gaze package</description>

  <author email="sksellio@gmail.com">Sarah Elliott</author>
  <maintainer email="sksellio@gmail.com">Sarah Elliott</maintainer>
  <maintainer email="rtoris@fetchrobotics.com">Russell Toris</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>

</package>


